infra/ingress/error-page/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: test-errors
spec:
  errors:
    status:
    - "404"
    - "500"
    - "501"
    - "503"
    - "505-599"
    query: /{status}.html
    service:
      name: error-page
      port: 80
