infra/ingress/error-page/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: error-page
  namespace: traefik
spec:
  selector:
    app: error-page
  ports:
  - port: 8080
    targetPort: 8080
    name: web
