infra/ingress/error-page/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: traefik
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`weebo.fr`) || Host(`maxleriche.net`)
    kind: Rule
    services:
    - name: error-page
      port: 8080
    middlewares:
    - name: test-errors
